--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ layout: default
           <li><a href="#" data-filter=".animals">Animals <sup><small>.123</small></sup></a></li>
           <li><a href="#" data-filter=".abstract">Abstract <sup><small>.144</small></sup></a></li>
           <li><a href="#" data-filter=".nature">Nature <sup><small>.140</small></sup></a></li>
+          <li><a href="#" data-filter=".superstructures">Super Structures <sup><small>.140</small></sup></a></li>
         </ul>
       </div>
 
