Link to photos album for more works

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ layout: default
     <div class="row m-t-70 text-center wow fadeInUp">
       <div class="col-sm-12">
 
-        <button id="show-more" class="btn btn-block btn-lg btn-g show-more">More works</button>
+        <button id="show-more-works" class="btn btn-block btn-lg btn-g show-more"><a href="https://goo.gl/photos/46R6pqjCGEXYt1Nz5">More works</a></button>
 
       </div>
     </div>
